# SmallBagOfTools

./: .gitignore  LICENSE  README.md  pyproject.toml
src/SmallBagOfTools/: __init__.py  utils.py
src/SmallBagOfTools/processing/: data.py  images.py  viz.py
src/SmallBagOfTools/training/: model_management.py
